--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
   "homepage": "https://github.com/HenryVanq/Hospital#readme",
   "dependencies": {
     "@material-ui/core": "^4.8.0",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongodb": "^3.1.10",
-    "mongoose": "^5.3.16",
+    "mongodb": "^3.5.2",
+    "mongoose": "^5.8.11",
+    "node-sass": "^4.13.1",
     "react-datepicker": "^2.10.1",
     "react-router-dom": "^5.1.2",
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "sass": "^1.25.0"
   }
 }
